# wdls

./: .anjuta_sym_db.db  .gitignore  Makefile.in  README  README.md  README~  configure  configure.ac
.anjuta/: default.profile
.anjuta/session/: anjuta.session  dock-layout.xml
Debug/: Makefile  config.h  config.status  libtool
Debug/src/: Makefile
Debug/src/.deps/: Socket.Po  arg.Po  main.Po  net.Po
autom4te.cache/: output.0  output.1  requests  traces.0  traces.1
root/: README  index.html
src/: Makefile.am  Makefile.in  Socket.c  Socket.h  arg.c  arg.h  http.c  http.h  httpbuff.c  httpbuff.h  list.c  list.h  main.c  net.c  net.h  utils.c  utils.h
test/: a.out  httper.c
