## Process this file with automake to produce Makefile.in

## Created by Anjuta

AM_CPPFLAGS = \
	-DPACKAGE_LOCALE_DIR=\""$(localedir)"\" \
	-DPACKAGE_SRC_DIR=\""$(srcdir)"\" \
	-DPACKAGE_DATA_DIR=\""$(pkgdatadir)"\"

AM_CFLAGS =\
	 -Wall\
	 -g

bin_PROGRAMS = wdls

wdls_SOURCES = \
	main.c \
	Socket.h \
	Socket.c \
	net.h \
	net.c \
	arg.c \
	arg.h \
	http.h \
	http.c \
	httpbuff.h \
	httpbuff.c \
	utils.h \
	utils.c \
	list.h \
	list.c

wdls_CFLAGS = -pthread 

wdls_LDFLAGS = 

wdls_LDADD = 

